Add Resume file and link

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                                                 <i class="fa fa-envelope icon_menu"></i> 
                                             </li>
 
-                                            <a href="page-builder-3.php.html#" id="print"><i class="fa fa-print icon_print"></i> </a>
-                                            <a href="page-builder-3.php.html#" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
+                                            <a href="javascript:window.print();" id="print"><i class="fa fa-print icon_print"></i> </a>
+                                            <a href="ShubhamPatel_Resume.pdf" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
 
                                         </ul>
                                         <!-- /resp-tabs-list -->
@@ -518,7 +518,7 @@
         <!-- /.title_content -->
         
         <!-- .download_resume -->
-        <a class="download" style="margin:0;float: left;" href="page-builder-3.php.html#">
+        <a class="download" style="margin:0;float: left;" target="_blank" href="ShubhamPatel_Resume.pdf">
             <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
         </a>
         <!-- /.download_resume -->
