--- a/index.html
+++ b/index.html
@@ -266,13 +266,16 @@
             </li>
         </ul>
 
-        <p style="margin-bottom:20px">
-            <i class="fa fa-quote-left"></i>       
-            Being a Tech entrepreneur, I believe maximal societal improvement can be achieved through technical awareness through Education. The aim is reduce the gap between the pace with which machine and humans learn. I see AI as the next platform providing plethora of moonshots opportunities. Hence, trying to contribute to its development and usage. I'm presently contributing to building exceptional E-commerce solutions Amazon. Also contributing to Berkman Center at Harvard University to activate open library spaces.Writing automation scripts and contributing to open source projects is what interests me. I spend most of the time hacking on exceptional ideas which aims to reduce manual efforts.
-        </p>
+
 
     </div>
     <!-- End left-wrap -->
+    <div class="col-md-6">
+        <p style="margin-bottom:20px; text-align:center">
+            <i class="fa fa-quote-left"></i>       
+            Being a Tech entrepreneur, I believe maximal societal improvement can be achieved through technical awareness through Education. The aim is reduce the gap between the pace with which machine and humans learn. I see AI as the next platform providing plethora of moonshots opportunities. Hence, trying to contribute to its development and usage. I'm presently contributing to building exceptional E-commerce solutions at Amazon. Also contributing to Berkman Center at Harvard University to activate open library spaces.Writing automation scripts and contributing to open source projects is what interests me. I spend most of the time hacking on exceptional ideas which aims to reduce manual efforts.
+        </p>
+    </div>
 
 </div>
 
